# smart_ai_app

./: README.md  compose.yaml
api/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/app/: main.py
api/app/chat/: agent_service.py  chat_service.py  recommender_service.py
api/chat/: agent_service.py  chat_model.py  chat_service.py
api/lab/: 1_0_quick_start.ipynb  1_1_agent.ipynb  1_2_model.ipynb  1_3_tools.ipynb  1_4_short_term_memory.ipynb  1_5_stream.ipynb  2_0_quick_start.ipynb  2_1_workflows_agents.ipynb  2_2_persistence.ipynb  2_3_stream.ipynb
ui/: Dockerfile  README.md  index.html  package-lock.json  package.json
ui/src/: App.jsx  index.css
ui/src/assets/: data.js  model.ts  query.js  util.js
ui/src/components/: AdvancedChat.tsx  Chat.tsx  FormatText.jsx  Review.tsx  ReviewTable.tsx  Sidebar.tsx  Test.tsx  Text.jsx
