[project]
name = "api"
version = "0.1.0"
description = "Smart AI App API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
]
